force-app/main/default/objects/Teacher__c/fields/Education_Description__c.field-meta.xml
<CustomField>
    <fullName>Education_Description__c</fullName>
    <label>Education Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>