force-app/main/default/objects/Teacher__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <formula>IF( TODAY()-  DATEVALUE(Joining_Date__c) &lt; 730, &apos;Beginner&apos;,
       IF( TODAY()- DATEVALUE( Joining_Date__c)   &gt;=730 &amp;&amp;  TODAY()-  DATEVALUE(Joining_Date__c) &lt;1460,&apos;Intemediate&apos;,
              &apos;Expert&apos;                          
) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience</label>
    <type>Text</type>
</CustomField>