force-app/main/default/objects/Teacher__c/validationRules/Valid_Teacher.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Teacher</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Contact_Email__c ) &amp;&amp; ISBLANK( Contact_Number__c )</errorConditionFormula>
    <errorMessage>Either one of Contact Email/Contact Number should be filled in order to create/update a record.</errorMessage>
</ValidationRule>